--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <img src="logo.png">
+        <img src="little-lemon-logo.png">
     </header>
     <main>
         <form>
@@ -30,6 +30,7 @@
                 <label type="text" for="password" id="password">Password</label>
                 <input type="password" id="password" minlength="2" name="password" required>
             </div>
+            <button type="submit">Login</button>
         </form>
 
     </main>
