--- a/booking.html
+++ b/booking.html
@@ -21,24 +21,25 @@
         <img src="little-lemon-logo.png">
     </header>
     <main>
-        <form>
+        <form method="post">
             <div>
-                <label type="username" for="username" id="username">Username</label>
-                <input type="text" id="username" minlength="2" name="username" required>
+                <label for="email" >Email Address</label>
+                <input type="email" id="email" name="email">
             </div>
             <div>
-                <label type="text" for="password" id="password">Password</label>
-                <input type="password" id="password" minlength="2" name="password" required>
+                <label for="date">Date of Booking</label>
+                <input type="date" id="date" name="date">
             </div>
             <div>
-
+                <label for="number">Number of People</label>
+                <input type="number" id="number" name="number" minlength="1" maxlength="8">
             </div>
             <div>
-
+                <label for="checkbox">I agree to the cancellation policy</label>
+                <input type="checkbox" id="checkbox" name="checkbox">
             </div>
-            <button type="submit">Login</button>
+            <button type="submit">Book Now</button>
         </form>
-
     </main>
 </body>
 
