--- a/booking.html
+++ b/booking.html
@@ -32,7 +32,7 @@
             </div>
             <div>
                 <label for="number">Number of People</label>
-                <input type="number" id="number" name="number" minlength="1" maxlength="8">
+                <input type="number" id="number" name="number" min="1" max="8">
             </div>
             <div>
                 <label for="checkbox">I agree to the cancellation policy</label>
